fix sizing issue on small screens for the comment form field

--- a/wine_cellar/assets/css/forms.css
+++ b/wine_cellar/assets/css/forms.css
@@ -39,7 +39,7 @@
   select,
   textarea,
   .ts-wrapper {
-    min-width: 100%;
+    width: 100%;
     min-height: 40px;
   }
 
